<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_authentication.LoginWithMobileActivity"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="BIP AUTH APP: Hassle-Free Authentication System"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="@color/text_color"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView android:textColor="@color/text_color"
                android:layout_width="wrap_content"
                android:text="@string/txt_welcome"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:shadowColor="@color/TransparentGrey"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="1.5"
                android:textSize="35sp"
                android:textStyle="bold"/>
            <TextView android:textColor="@color/text_color"
                android:layout_width="wrap_content"
                android:text="@string/txt_login_info"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textStyle="normal"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/ll_login_info"
            android:layout_marginTop="10dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="04dp"
                card_view:cardElevation="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                card_view:cardUseCompatPadding="false">

                <EditText
                    android:id="@+id/mobileNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:elevation="2dp"
                    android:shadowColor = "#008080"
                    android:hint="@string/edit_txt_mobile"
                    android:paddingLeft="10dp"
                    android:paddingRight="20dp"
                    android:gravity="center"
                    android:inputType="phone"
                    android:background="@drawable/rounded_edittext"
                    android:drawableLeft="@drawable/ic_mobile" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linLoginId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@id/passwordEditText"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:text="Login"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/rounded_button"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnLoginWithEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="05dp"
                    android:paddingTop="05dp"
                    android:paddingEnd="05dp"
                    android:paddingBottom="05dp"
                    android:text="Login With Email address &amp; Password"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</ScrollView>
